# Python-FastAPI-REST-Starter

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  tox.ini
src/app/: asgi.py  settings.py
src/app/dependencies/: __init__.py  database.py  sessions.py
src/app/ext/: db.py  lifespan.py
src/app/middlewares/: __init__.py  database.py  exception.py
src/app/middlewares/http/: __init__.py  database.py  exception.py
src/app/migrations/: env.py
src/app/schemas/domain/: hello.py
src/app/urls/: __init__.py
src/app/urls/api/: __init__.py
src/app/urls/api/v1/: __init__.py  hello.py
src/app/views/: hello.py
tests/: conftest.py
tests/solution/: test_404.py  test_docs.py  test_hello.py
